✨feat: ディクレトリの変更

--- a/services/quiz/config/config.toml.tmpl
+++ b/services/quiz/config/config.toml.tmpl
@@ -10,5 +10,5 @@ host      = "${MYSQL_MAIN_HOST:-"localhost"}"
 port      = "${MYSQL_MAIN_PORT:-3306}"
 user      = "${MYSQL_MAIN_USER:-"root"}"
 password  = "${MYSQL_MAIN_PASSWORD:-"password"}"
-db_name   = "${MYSQL_MAIN_DB_NAME:-"move_rule"}"
+db_name   = "${MYSQL_MAIN_DB_NAME:-"garbage_category_rule_quiz"}"
 ssl_mode  = "${MYSQL_MAIN_SSL_MODE:-"disable"}"
